--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,21 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="false"
+        android:requestLegacyExternalStorage="true"
+        android:hardwareAccelerated="true"
+        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".StartEmbroidActivity"></activity>
+        android:theme="@style/Theme.SewingMachine">
+        <activity
+            android:theme="@style/Theme.SewingMachine.old"
+            android:name=".StartEmbroidActivity"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".DeviceListActivity" />
         <activity android:name=".LoginActivity">
@@ -26,7 +33,8 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".EmbroideryActivity" />
+        <activity
+            android:name=".EmbroideryActivity" />
         <activity android:name=".CreateActivity" />
         <activity android:name=".SewingActivity" />
         <activity android:name=".SettingActivity" />
