--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.SewingMachine">
         <activity android:name=".StartEmbroidActivity"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".DeviceListActivity" />
