--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SewingMachine">
-<<<<<<< HEAD
-
-=======
->>>>>>> b854e5d559156251fe2ddf683bf7aca24adad773
         <activity
             android:theme="@style/Theme.SewingMachine.old"
-            android:name=".StartEmbroidActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
+            android:name=".StartEmbroidActivity"/>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".DeviceListActivity" />
         <activity android:name=".LoginActivity">
 
