--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity
             android:theme="@style/Theme.SewingMachine.old"
             android:name=".StartEmbroidActivity"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity">
+        </activity>
         <activity android:name=".DeviceListActivity" />
         <activity android:name=".LoginActivity">
 
@@ -31,7 +32,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".EmbroideryActivity" />
